Exercice créer un nouveau controller dans avec une nouvelle route qui affiche Hello et la variable nom si rien n'est mis pour cette variable elle doit être égale à World sinon elle prend en GET le nom de taper

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,8 @@
-index:
-    path: /
-    controller: App\Controller\testController::index
+
+
+# index:
+#     path: /
+#     controller: App\Controller\testController::index
 
 test:
   path: /test
@@ -13,5 +15,9 @@ test2:
     # age: 0
   # requirements: 
     # age: \d+
+
+# hello:
+#   path: /hello/{nom?World}
+#   controller: App\Controller\HelloWorld::hello
 
 
